examples/test/testpolicy19777.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19777
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key4: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value27
          key22: value30
          key9: value25
      podSelector:
        matchLabels:
          key33: value43
          key13: value8
